css/parser/tests/errors/important/basic/output.stderr
error: Expected important
 --> $DIR/tests/errors/important/basic/input.css:2:20
  |
2 |     color: white !!important;
  |                    ^^^^^^^^^

